Changed model to facemesh

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <!-- *** Import tfjs-vis - optional *** -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis/dist/tfjs-vis.umd.min.js"></script> -->
     <!-- Load the coco-ssd model to use to recognize things in images -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script> -->
     <!-- Facemesh -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
     <!-- Import the page's JavaScript to do some stuff -->
     <script src="/script.js" defer></script>
   </body>
