--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
       <div id="liveView" class="camView">
         <button id="webcamButton">Enable Webcam</button>
-        <video id="webcam" autoplay width="640" height="480"></video>
+        <canvas id="output"></canvas>
+        <video id="webcam" autoplay style="visibility: hidden;" width="640" height="480"></video>
       </div>
     </section>
 
